# remark

./: .git-cliff.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  dist-workspace.toml  extra-ignores  hk.pkl  mise.toml  release-plz.toml
.claude/: settings.local.json
.github/: build-setup.yml
.github/workflows/: ci.yml  release-cut.yml  release-plz.yml  release.yml
.pi/: heimdall.json
.zed/: tasks.json
docs/: phase1.md
src/: add_cmd.rs  app.rs  clipboard.rs  config.rs  diff.rs  draft_cmd.rs  file_tree.rs  git.rs  highlight.rs  lsp.rs  main.rs  new_cmd.rs  notes.rs  prompt_cmd.rs  prompt_code.rs  purge_cmd.rs  resolve_cmd.rs  review.rs  ui.rs
vscode-extension/remark-lsp/: .gitignore  package-lock.json  package.json  tsconfig.json
vscode-extension/remark-lsp/src/: extension.ts
wix/: main.wxs
zed-extension/remark-lsp/: Cargo.toml  extension.toml
zed-extension/remark-lsp/src/: lib.rs
