[package]
name = "remark"
version = "0.1.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/casualjim/remark"
homepage = "https://github.com/casualjim/remark"
description = "Terminal-first code review notes for Git repos."
authors = ["Ivan Porto Carrero <ivan@flanders.co.nz>"]

[dependencies]
anyhow = "1"
crossterm = "0.29"
gix = { version = "0.76", features = ["revision", "tree-editor"] }
gix-actor = "0.36"
gix-date = "0.11"
gix-dir = "0.18"
gix-hash = "0.21"
gix-object = "0.53"
gix-ref = "0.56"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
gix-diff = "0.56"
syntastica = "0.6"
syntastica-parsers = { version = "0.6", features = ["all"] }
syntastica-themes = "0.6"
hyperpolyglot = "0.1"
copypasta = "0.10"
base64 = "0.22"
unicode-width = "0.2"
wl-clipboard-rs = "0.9"
mimalloc = "0.1.48"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
install-updater = true

[package.metadata.release]
sign-commit = false
sign-tag = false
publish = false
allow-branch = ["main"]

[package.metadata.wix]
upgrade-guid = "57638460-6758-438B-A317-03146D8FE5F7"
path-guid = "315F95A5-592C-410D-A239-585E74B1C1F4"
license = false
eula = false
